# Keystone

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
keystone/: .coverage  alembic.ini  keystone.db  pyproject.toml
keystone/.github/workflows/: ci.yml
keystone/migrations/: env.py  script.py.mako
keystone/migrations/versions/: 0002522ff9e4_create_base_identity_tables.py  067c920e7b56_update_models_with_user_and_invitation_changes.py  18fe05ef04a8_remove_hashed_password_from_user.py  31e446a6a01c_create_base_identity_tables.py  48a4f98a6ec3_remove_hashed_password_from_user.py  69cad9ecc04a_create_base_identity_tables.py  82689c25b22f_initial_schema_with_invitations.py  aaf95f372593_add_hashed_password_to_user.py  bfb2f48b0265_add_token_to_invitations_and_update_user.py  bfe1d04fe7f7_add_teams_and_team_memberships.py
keystone/src/keystone/: main.py
keystone/src/keystone/api/: dependencies.py  invitations.py  teams.py  users.py
keystone/src/keystone/core/: config.py  db.py
keystone/src/keystone/crud/: invitations.py  teams.py  users.py
keystone/src/keystone/models/: invitation.py  role.py  team.py  tenant.py  user.py
keystone/src/keystone/schemas/: invitation.py  team.py  user.py
keystone/tests/: conftest.py
keystone/tests/test_api/: test_invitations.py  test_teams.py  test_users.py
