[tool.poetry]
name = "keystone"
version = "0.1.0"
description = "Keystone: A robust, multi-tenant authentication and authorization foundation for modern SaaS applications."
authors = ["Aetherius <aetherius@architecture.dev>"]
readme = "README.md"
packages = [{include = "keystone", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest-anyio = "^0.0.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
strict = true
namespace_packages = true
